# MrLixm.github.io

./: .editorconfig  .gitignore  404.css  404.html  CNAME  README.md  contact.html  index.css  index.html  info.json  pelicanconf.py  publishconf.py  pyproject.toml  requirements.txt  search.html
.doc/: .doc.html  doc.css  index.html  test.html
about/: index.html
author/: baba-be.html  liam-collod.html  test-def.html
blog/: blog.css  blog.rss.xml  index.html
cache/: ArticlesGenerator-Readers  PagesGenerator-Readers
category/: breakdown.html  coding.html  meta.html  resource.html  test.html  tutorial.html
dev/: README.md  __main__.py  _git-publish-noprompt.sh  c.py  cfg.py  cli.py  git-publish.sh  hierarchy.py  pelican-build-debug.sh  pelican-build-n-preview.sh  pelican-build.sh  pelican-preview.sh  publish-online.py  publish.py
docs/: pelicanconf.py
drafts/: katana_instancing.html  mari-color-management.html  opendrt.html  substance-painter-color-management.html  test-css.html  windows-explorer-context-menu.html
feeds/: all.atom.xml  breakdown.atom.xml  coding.atom.xml  meta.atom.xml  resource.atom.xml  tutorial.atom.xml
output/: archives.html  authors.html  categories.html  first-post.html  index.html  tags.html
pagefind/: pagefind-entry.json  pagefind.en_185d639388.pf_meta  pagefind.en_1878185e2d.pf_meta  pagefind.en_332a52781a.pf_meta  pagefind.en_3730dfdff5.pf_meta  pagefind.en_44d9f3f249.pf_meta  pagefind.en_4e6b574af6.pf_meta  pagefind.en_a9e52b1e5b.pf_meta  pagefind.en_ae38a6fc79.pf_meta  pagefind.en_b7e389d471.pf_meta  (+12 more)
resources/: index.css  (+3 more)
(+809 files in other folders)
