[project]
name = "MrLixm.github.io"
version = "1.0.0"
description = "Personal website and blog repository."
authors = [
    {name="Liam Collod", email = "monsieurlixm@gmail.com"},
]
readme = "README.md"
requires-python = ">=3.9,<=3.11"
dependencies = [
    "Pillow==8.4.0",
    "ghp-import==2.0.2",
    "pelican==4.7.2",
    "Pygments==2.10.0",
    "docutils-stubs==0.0.22",
    "click==8.1.*",
]

[tool.uv]
dev-dependencies = [
    "black>=24.10.0",
]
