[project]
name = "MrLixm.github.io"
version = "2.0.0"
description = "Personal website and blog repository."
authors = [
    { name = "Liam Collod" },
]
readme = "README.md"
requires-python = ">=3.10,<=3.11"
dependencies = [
    "jinja2>=3.1.6",
    "pygments>=2.19.1",
    "pillow>=11.1.0",
    "pagefind[bin]>=1.3.0",
    "markdown>=3.8.2",
    "pymdown-extensions>=10.16",
]

[tool.uv]
dev-dependencies = [
    "black>=24.10.0",
    "pytest>=8.3.5",
]
